<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.56"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/surface"
            android:layout_width="320px"
            android:layout_height="240px"
            android:layout_gravity="center"
            android:layout_weight="0.47" >
        </ImageView>

        <GridLayout
            android:id="@+id/gridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:columnCount="2" >

            <Button
                android:id="@+id/upButton"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:onClick="upButtonListener"
                android:text="@string/up" />

            <Button
                android:id="@+id/leftButton"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_rowSpan="2"
                android:onClick="leftButtonListener"
                android:text="@string/left" />

            <Button
                android:id="@+id/stopButton"
                android:layout_column="1"
                android:layout_gravity="left"
                android:layout_row="1"
                android:layout_rowSpan="2"
                android:onClick="stopButtonListener"
                android:text="@string/stop" />

            <Button
                android:id="@+id/rightButton"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="1"
                android:layout_rowSpan="2"
                android:onClick="rightButtonListener"
                android:text="@string/right" />

            <Button
                android:id="@+id/downButton"
                android:layout_column="1"
                android:layout_gravity="bottom"
                android:layout_row="2"
                android:onClick="downButtonListener"
                android:text="@string/down" />

            <Space
                android:layout_width="1dp"
                android:layout_height="18dp"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="1" />

            <Space
                android:layout_width="125dp"
                android:layout_height="1dp"
                android:layout_column="0"
                android:layout_row="0" />
        </GridLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pauseButtonListener"
                android:text="@string/pause" />

            <Button
                android:id="@+id/quitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="quitButtonListener"
                android:text="@string/quit" />
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>